# komandan

./: AGENTS.md  Cargo.toml  Dockerfile  README.md  build.rs  install.sh
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: build-aarch64.yml  coverage.yml  release-build.yml  release.yml  rust.yml
.idx/: dev.nix
crates/komandan/: Cargo.toml
crates/komandan-core/: Cargo.toml  build.rs
crates/komandan-core/examples/: apt.lua  check_file_example.lua  parallel_tasks.lua  parse_hosts_json.lua  postgresql_user.lua  run_script.lua  simple.lua
crates/komandan-core/src/: args.rs  executor.rs  lib.rs  models.rs  repl_config.rs  ssh.rs
crates/komandan-core/src/checks/: mod.rs
crates/komandan-core/src/checks/base/: context.rs  mod.rs  result_validation.rs  tests.rs
crates/komandan-core/src/checks/file/: tests.rs
crates/komandan-core/src/checks/package/: apt.rs  dnf.rs  mod.rs
crates/komandan-core/src/checks/service/: compare.rs
crates/komandan-core/src/connection/: session.rs
crates/komandan-core/src/modules/: apt.rs  dnf.rs  download.rs  group.rs  script.rs  systemd_service.rs  template.rs
crates/komandan-core/src/parallel_executor/: batch.rs  error.rs  pool.rs  tests.rs
crates/komandan-core/src/plugin/: conversions.rs  core_api.rs  loader.rs  mod.rs
crates/komandan-core/src/templates/: komandan.json.j2
crates/komandan-core/src/util/: display.rs  dprint.rs  filter.rs  host_info.rs  hosts_json.rs  mod.rs
crates/komandan-core/tests/: check_file_integration.rs  check_parameter_validation.rs  komando_parallel_hosts.rs  parallel_executor_error_scenarios.rs  performance_test.rs  plugin_core_api.rs  ssh_lua_integration.rs
crates/komandan-hello-plugin/: Cargo.toml  README.md
crates/komandan-hello-plugin/src/: lib.rs
crates/komandan-playbook/: Cargo.toml  NOTICE
crates/komandan-playbook/benches/: parse.rs  playbook.rs
crates/komandan-playbook/benches/common/: mod.rs
crates/komandan-playbook/src/: cli.rs  commands.rs  connection_pool.rs  error.rs  host.rs  leak.rs  lib.rs  role.rs  test_support.rs  vars.rs
crates/komandan-playbook/src/executors/: control.rs  gap.rs  gap_files.rs  gap_misc.rs  gap_ops.rs  mod.rs  reuse.rs
crates/komandan-playbook/src/inventory/: ini.rs  mod.rs
crates/komandan-playbook/src/parser/: mod.rs  model.rs  yaml.rs
crates/komandan-playbook/src/runner/: block.rs  facts.rs  mod.rs  tags.rs  task.rs
crates/komandan-playbook/src/templating/: engine.rs  filters.rs  jtests.rs  lookups.rs  magic.rs  mod.rs
crates/komandan-playbook/tests/: real_roles.rs  scoped_roles.rs  templating.rs
crates/komandan-playbook/tests/fixtures/: site-docker.yml  site-nginx.yml  site-ssh-hardening.yml
crates/komandan-playbook/tests/fixtures/roles/: docker.toml  nginx.toml  ssh-hardening.toml
crates/komandan-playbook/tests/fixtures/roles/docker/tasks/: main.yml
crates/komandan-playbook/tests/fixtures/roles/docker/vars/: main.yml
crates/komandan-playbook/tests/fixtures/roles/nginx/defaults/: main.yml
crates/komandan-playbook/tests/fixtures/roles/nginx/tasks/: main.yml
crates/komandan-playbook/tests/fixtures/roles/nginx/templates/: nginx.conf.j2
crates/komandan-playbook/tests/fixtures/roles/ssh-hardening/tasks/: main.yml
crates/komandan-plugin-abi/: Cargo.toml  README.md
crates/komandan-plugin-abi/src/: context.rs  entry.rs  error.rs  handles.rs  lib.rs  traits.rs  types.rs
crates/komandan-plugin-abi/tests/: plugin_trait_smoke.rs
crates/komandan/src/: main.rs
docs/: modules.md
examples/: apt.lua  dnf.lua  file.lua  gen_module_docs.rs  group.lua  host_info_basic.lua  hosts.lua  lineinfile.lua  multi_hosts_tasks.lua  parallel_hosts.lua  parse_hosts_json.lua  postgresql_replication_setup_ubuntu.lua  postgresql_user.lua  run_script.lua  simple.lua  systemd_service.lua  template.lua  upload_download_file.lua
http-client/: Cargo.toml
http-client/src/: lib.rs
http-client/tests/: integration_test.rs
schema/: komandan.schema.json
scripts/: analyze-real-roles.sh
src/: args.rs  defaults.rs  komando.rs  lib.rs  local.rs  main.rs  models.rs  parallel_executor.rs  project.rs  report.rs  ssh.rs  util.rs  validator.rs
src/checks/: base.rs  file.rs  package.rs  service.rs
src/checks/base/: execution.rs  result.rs  tests.rs  validation.rs
src/checks/file/: compare.rs  mod.rs
src/checks/package/: apt.rs  dnf.rs  mod.rs  tests.rs
src/checks/service/: compare.rs  mod.rs  tests.rs
src/connection/: auth.rs  elevation.rs  env.rs  error.rs  mod.rs  session.rs  test_utils.rs  tests.rs
src/modules/: apt.rs  base.rs  cmd.rs  core.rs  dnf.rs  download.rs  file.rs  get_url.rs  lineinfile.rs  mod.rs  postgresql_user.rs  script.rs  systemd_service.rs  template.rs  upload.rs  user.rs
src/modulesv2/: apt.rs  cmd.rs  dnf.rs  download.rs  execution.rs  factory.rs  file.rs  mod.rs  systemd_service.rs  template.rs  upload.rs
src/notification/: errors.rs  google_chat.rs  mod.rs  slack.rs  smtp.rs  templates.rs  utils.rs  validation.rs
src/parallel_executor/: batch.rs  config.rs  lua_bridge.rs  mod.rs  monitor.rs  summary.rs  tests.rs  validation.rs
src/ssh/: test_utils.rs
src/templates/: hosts.lua  komandan.json.j2  main.lua
src/util/: host_info.rs  hosts_json.rs  regex_helpers.rs  tests.rs
tests/: check_package_integration.rs  check_service_integration.rs  check_system_integration.rs  cli_integration.rs  connection_factory_integration.rs  komando.rs  komando_parallel_hosts.rs  komando_parallel_tasks.rs  modulesv2_dry_run_integration.rs  modulesv2_integration.rs  modulesv2_logging_integration.rs  modulesv2_no_report_integration.rs  modulesv2_system_validation.rs  parallel_executor_comprehensive.rs  parallel_executor_debug.rs  parallel_executor_error_scenarios.rs  parallel_executor_integration.rs  parallel_executor_performance.rs  parallel_executor_simple.rs  performance_test.rs  ssh_integration.rs  ssh_lua_integration.rs
tests/ssh/: Dockerfile  README.md  run_sshd.sh
