[package]
name = "komandan"
version = "0.0.4"
authors = ["Abdul Munif Hanafi"]
license = "MIT"
edition = "2024"

[features]
vendored-openssl = ["http-klien/vendored-openssl", "ssh2/vendored-openssl"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.55", features = ["derive"] }
secrecy = { version = "0.10.3", features = ["serde"] }
http-klien = { git = "https://github.com/hahnavi/http-klien-rs", branch = "main" }
minijinja = { version = "2.15.1", features = ["loader", "json"] }
mlua = { version = "0.11.6", features = [
    "anyhow",
    "luajit",
    "macros",
    "serialize",
    "vendored",
] }
num_cpus = "1.16.0"
rand = "0.9.2"
rayon = "1.11.0"
regex = "1.12.2"
rustyline = "17.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ssh2 = "0.9.5"

[dev-dependencies]
tempfile = "3.24.0"
mockall = "0.14.0"

[profile.release]
lto = "fat"
strip = "symbols"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
expect_used = "deny"
