[package]
name = "komandan"
version = "0.0.4"
authors = ["Abdul Munif Hanafi"]
license = "MIT"
edition = "2024"
build = "build.rs"

[features]
vendored-openssl = ["http-klien/vendored-openssl", "ssh2/vendored-openssl"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.55", features = ["derive"] }
secrecy = { version = "0.10.3", features = ["serde"] }
http-klien = { git = "https://github.com/hahnavi/http-klien-rs", branch = "main" }
minijinja = { version = "2.15.1", features = ["loader", "json"] }
mlua = { version = "0.12.0-rc.2", features = [
    "anyhow",
    "luajit",
    "macros",
    "serialize",
    "vendored",
] }
rand = "0.9.2"
rayon = "1.11.0"
regex = "1.12.2"
rustyline = "17.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ssh2 = "0.9.5"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.24.0"
mockall = "0.14.0"

[profile.release]
lto = "fat"
strip = "symbols"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
expect_used = "deny"

[patch.crates-io]
# proc-macro-error2 is archived and emits a future-incompat warning (E0365).
# This fork contains the upstream fix (PR GnomedDev/proc-macro-error-2#14).
proc-macro-error2 = { git = "https://github.com/fgardt/proc-macro-error-2", branch = "fix/future-incompat" }
