[package]
name = "komandan"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
description = "Agentless server automation tool, Lua-scripted and written in Rust"

[features]
# Forwarded so `cargo build -p komandan --features vendored-openssl` works.
vendored-openssl = ["komandan-core/vendored-openssl"]

[dependencies]
komandan-core.workspace = true
anyhow.workspace = true
clap.workspace = true
mlua.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
